<resources>

    <string-array name="status_array">
        <item>All</item>
        <item>Pending</item>
        <item>In Process</item>
        <item>Resolved</item>
    </string-array>

    <string-array name="calender_type">
        <item>Date</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>

    <string name="app_name">Alertify</string>
    <string name="alertify_heading">ALERTIFY</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="select_item">Select Police Station</string>
    <string name="police_station_name">Name :</string>
    <string name="police_station_location">Location :</string>
    <string name="cancel">Cancel</string>
    <string name="user_name_hint">enter user name</string>
    <string name="ok">Ok</string>
    <string name="maps_api_key">AIzaSyCoDtci5S11xJfMTs4zIJvBoytoIKnfn_Y</string>
    <string name="search">Search...</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="update">Update</string>
    <string name="police_station_boundary">Boundary :</string>
    <string name="police_station_no">No :</string>
    <string name="email_hint">example@gmail.com</string>
    <string name="dep_admin_name_hint">enter department admin name</string>
    <string name="police_station_location_hint">enter police station\'s location</string>
    <string name="police_station_name_hint">enter police station name</string>
    <string name="police_station_no_hint">enter police station number</string>
    <string name="title_activity_police_station_boundary_maps">PoliceStationBoundaryMapsActivity
    </string>
    <string name="police_station_samanabad_faisalabad">Police Station Samanabad Faisalabad</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="high_authority_sign_up">High Authority Sign-up</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_name">enter your name</string>
    <string name="please_enter_your_details">Please enter your details.</string>
    <string name="email">Email</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="password">Password</string>
    <string name="enter_at_least_6_words">enter at least 6 words</string>
    <string name="signup">Signup</string>
    <string name="alertify">ALERTIFY</string>
    <string name="name">Name :</string>
    <string name="police_station">Police Station:</string>
    <string name="email_">Email :</string>
    <string name="name_simple">Name</string>
    <string name="police_station_simple">Police Station</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="see_analytics">See Analytics</string>
    <string name="date">Date</string>
    <string name="calender_type">Calender Type</string>
    <string name="select_complaint_investigation_status">Select Complaint Investigation Status</string>
    <string name="select_department_admin">Select Department Admin</string>
    <string name="police_stations">Police Stations</string>
    <string name="department_admins">Department Admins</string>
    <string name="complaints">Complaints</string>
    <string name="analytics">Analytics</string>
    <string name="evidence">Evidence</string>
    <string name="download">Download</string>
    <string name="crime_details">Crime Details</string>
    <string name="crime_location">Crime Location</string>
    <string name="crime_datetime">Crime DateTime</string>
    <string name="complaint_police_station">Complaint Police Station</string>
    <string name="complaint_datetime">Complaint DateTime</string>
    <string name="investigation_status">Investigation Status</string>
    <string name="user_name">User Name</string>
    <string name="user_phone_no">User Phone No</string>
    <string name="user_cnic">User CNIC</string>
    <string name="crime_type">Crime Type</string>
    <string name="feedback">Feedback</string>
</resources>