<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_color"
        >

        <ImageView
            android:id="@+id/depAdminStatusIcon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:id="@+id/txt_alertify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/noto_serif_bold"
            android:layout_below="@+id/depAdminStatusIcon"
            android:text="ALERTIFY"
            android:textColor="@color/white"
            android:textSize="30sp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/txt_alertify"
            android:layout_marginTop="50dp"
            android:background="@drawable/login_signup_shape"
            android:backgroundTint="@color/white"
            android:paddingBottom="20dp">


            <ImageView
                android:id="@+id/name_icon"
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/user" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_toEndOf="@+id/name_icon"
                android:text="@string/name_simple"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/depAdminNameEditBtn"
                android:layout_width="18sp"
                android:layout_height="18sp"
                android:layout_below="@+id/name"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/pencil" />

            <TextView
                android:id="@+id/editDepAdminName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:layout_toStartOf="@+id/depAdminNameEditBtn"
                android:layout_toEndOf="@+id/name_icon"
                android:textColor="#7C7B7B"
                android:textSize="15sp" />

            <View
                android:id="@+id/name_underline"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@id/editDepAdminName"
                android:layout_marginTop="20dp"
                android:background="#B1B1B1" />

            <ImageView
                android:id="@+id/police_station_icon"
                android:layout_width="18sp"
                android:layout_height="18sp"
                android:layout_below="@+id/name_underline"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/police_station" />

            <TextView
                android:id="@+id/police_station"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name_underline"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/police_station_icon"
                android:text="@string/police_station_simple"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/depAdminPoliceStationEditBtn"
                android:layout_width="18sp"
                android:layout_height="18sp"
                android:layout_below="@+id/police_station"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/pencil" />

            <TextView
                android:id="@+id/editDepAdminPoliceStation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/police_station"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:layout_toStartOf="@+id/depAdminPoliceStationEditBtn"
                android:layout_toEndOf="@+id/police_station_icon"
                android:textColor="#7C7B7B"
                android:textSize="15sp" />

            <View
                android:id="@+id/police_station_underline"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@id/editDepAdminPoliceStation"
                android:layout_marginTop="20dp"
                android:background="#B1B1B1" />


            <ImageView
                android:id="@+id/email_icon"
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:layout_below="@+id/police_station_underline"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/mail" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/police_station_underline"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/email_icon"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="17sp" />


            <TextView
                android:id="@+id/editDepAdminEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="40dp"
                android:layout_toEndOf="@+id/email_icon"
                android:textColor="#7C7B7B"
                android:textSize="15sp" />


        </RelativeLayout>


    </RelativeLayout>

</ScrollView>